[tool.poetry]
name = "kremlin-official"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
jupyter = "^1.0.0"
peewee = "^3.15.3"
python-dotenv = "^0.21.0"
PyMySQL = "^1.0.2"
mysqlclient = "^2.1.1"
python-slugify = "^6.1.2"
requests = "^2.28.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
